--- a/form.html
+++ b/form.html
@@ -42,7 +42,7 @@
                 </div>
             </div>
             <div class="form-input">
-                <span class="inputColumn">State</span>
+                <div class="inputColumn">State</div>
                   <input type="text" class="valueColumn" name="state">
             </div>
             <div class="form-input">
